--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server/index.js"
+    "start": "sudo node server/index.js"
   },
   "repository": {
     "type": "git",
@@ -19,10 +19,14 @@
   "homepage": "https://github.com/TomDobbelaere/SANO#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "dotenv": "^4.0.0",
+    "ejs": "^2.5.6",
     "express": "^4.15.3",
     "express-logging": "^1.1.1",
     "express-session": "^1.15.3",
     "morgan": "^1.8.2",
+    "mysql": "^2.13.0",
     "terminal-kit": "^1.8.13"
-  }
+  },
+  "devDependencies": {}
 }
