--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
   "homepage": "https://github.com/TomDobbelaere/SANO#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.17.2",
     "dotenv": "^4.0.0",
     "ejs": "^2.5.6",
     "express": "^4.15.3",
     "express-logging": "^1.1.1",
+    "express-mysql-session": "^1.2.0",
     "express-session": "^1.15.3",
     "morgan": "^1.8.2",
     "mysql": "^2.13.0",
+    "socket.io": "^2.0.2",
     "terminal-kit": "^1.8.13"
   },
   "devDependencies": {}
