--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "express-session": "^1.15.3",
     "morgan": "^1.8.2",
     "mysql": "^2.13.0",
+    "random-words": "0.0.1",
+    "shortid": "^2.2.8",
     "socket.io": "^2.0.2",
     "terminal-kit": "^1.8.13"
   },
